# Durhack_2022

./: .gitignore  Cargo.toml  README.md  config.toml  index.html
src/: betting-maths.rs  betting_maths.rs  database.rs  main.rs  simulation.rs  system.rs  ui.rs  webserver.rs
web_scenes/: index.html
