[package]
name = "durhack_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
lazy_static = "1.4.0"
serde = "1.0.147"
serde_derive = "1.0.147"
toml = "0.5.9"
poem = "1.3.48"
mongodb = "2.3.1"
bevy = "0.9.0"
