[package]
name = "durhack_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
lazy_static = "1.4.0"
serde = "1.0.147"
serde_derive = "1.0.147"
toml = "0.5.9"
poem = { version = "1.3.48", features = ["websocket"] }
mongodb = "2.3.1"
rapier2d = "0.16.1"
bevy = "0.9.0"
rust_math = "0.3.7"
probability_to_friendly_string = "0.3.0"
tokio = "1.22.0"
futures-util = "0.3.25"
serde_json = "1.0.88"
regex = "1.7.0"
json = "0.12.4"
rsrl = "0.8.1"
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10.5", features = ["cblas", "system"] }
